gcc/testsuite/gm2/switches/uninit-variable-checking/fail/testinit.mod
MODULE testinit ;


PROCEDURE test ;
VAR
   p: CARDINAL ;
BEGIN
   (* p := 6 ; *)
   IF p = 6
   THEN
   END
END test ;


BEGIN
   test
END testinit.
